Correção ARIA Landmark

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" role="region">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -18,7 +18,7 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    <div class="card">
+    <div class="card" role="banner">
       <div class="qr">
         <img src="./assets/images/image-qr-code.png" alt="qrcode" />
       </div>
@@ -30,7 +30,7 @@
         </p>
       </div>
     </div>
-    <div class="attribution">
+    <div class="attribution" role="complementary">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
